--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-bar w3-khaki w3-card">
+  <div class="w3-bar w3-khaki w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-xxlarge">HTML</a>
-    <a href="#band" class="w3-bar-item w3-button w3-xxlarge">CCS3</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-xxlarge">JAVASCRIPT</a>
+    <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-khaki">Home</a>
+    <a href="https://www.w3schools.com/html/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">HTML</a>
+    <a href="https://www.w3schools.com/css/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CSS3</a>
+    <a href="https://www.w3schools.com/js/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">JAVASCRIPT</a>
     <div class="w3-dropdown-hover w3-xxlarge">
       <button class="w3-xxlarge w3-button" title="3-IN-1">3-IN-1<i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
