--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       </div>
     </div>
     <!-- Header -->
-<header class="w3-container w3-red w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">GITHUB for GSC</h1>
-  <p class="w3-xlarge">Template by wilson-gsc.css</p>
-  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Get Started</button>
+<header class="w3-container w3-khaki w3-center" style="padding:128px 16px">
+  <h1 class="w3-margin w3-jumbo">WEB FUNDAMENTALS 101</h1>
+  <p class="w3-xlarge">404-error-self-worth-not-found</p>
+  <button class="w3-button w3-Khaki w3-padding-large w3-large w3-margin-top">Get Started</button>
 </header>
 
 <!-- First Grid -->
