--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-khaki w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-khaki">Home</a>
+    <a href="https://404-error-self-worth-not-found.github.io/WebFundamentals/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">HOME</a>
     <a href="https://www.w3schools.com/html/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">HTML</a>
     <a href="https://www.w3schools.com/css/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CSS3</a>
     <a href="https://www.w3schools.com/js/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">JAVASCRIPT</a>
@@ -50,9 +50,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h1>Lorem Ipsum</h1>
       <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
 
-      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
   </div>
 </div>
