--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <header class="w3-container w3-white w3-center" style="padding:128px 16px">
   <h1 class="w3-margin w3-jumbo">WEB FUNDAMENTALS 101</h1>
   <p class="w3-xlarge">404-error-self-worth-not-found</p>
-  <button class="w3-button w3-white w3-padding-large w3-large w3-margin-top">Get Started</button>
+  <button class="w3-button w3-khaki w3-padding-large w3-large w3-margin-top">Get Started</button>
 </header>
 
 </div>
