--- a/index.html
+++ b/index.html
@@ -45,7 +45,20 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
  </div>
  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">wilson-gsc.css</a></p>
 </footer>
- 
+ <script>
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+  var x = document.getElementById("navDemo");
+  if (x.className.indexOf("w3-show") == -1) {
+    x.className += " w3-show";
+  } else { 
+    x.className = x.className.replace(" w3-show", "");
+  }
+}
+</scrip>
+</body>
+</html>
+
 
   }
 }
