--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
     <i class="fa fa-twitter w3-hover-opacity"></i>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
  </div>
- <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">wilson-gsc.css</a></p>
+ <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">https://404-error-self-worth-not-found.github.io/WebFundamentals/</a></p>
 </footer>
  <script>
 // Used to toggle the menu on small screens when clicking on the menu button
