--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
     <a href="https://www.w3schools.com/html/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">HTML</a>
     <a href="https://www.w3schools.com/css/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CSS3</a>
     <a href="https://www.w3schools.com/js/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">JAVASCRIPT</a>
-  
-      </div>
+  <a href="https://blog.hubspot.com/marketing/web-design-html-css-javascript/" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">3-in-1</a>
+ 
+  </div>
     </div>
     <!-- Header -->
 <header class="w3-container w3-white w3-center" style="padding:128px 16px">
