--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
     </div>
     <!-- Header -->
 <header class="w3-container w3-white w3-center" style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo">WEB FUNDAMENTALS 101</h1>
+  <h1 class="w3-margin w3-italic w3-jumbo">WEB FUNDAMENTALS 101</h1>
   <p class="w3-xlarge">404-error-self-worth-not-found</p>
   
 </header>
