--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
   <p class="w3-xlarge">404-error-self-worth-not-found</p>
   
 </header>
+</div>
 
+<!-- Second Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-third w3-center">
+      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+    </div>
+
+    <div class="w3-twothird">
+      <h1>Divine and Kitty</h1>
 </div>
 
 <div class="w3-container w3-khaki w3-center w3-opacity w3-padding-64">
