--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-      <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+       <img src="https://c7.uihere.com/files/56/403/799/http-404-error-wrong.jpg w3-padding-64 w3-text-red w3-margin-right"></i>
     </div>
 
     <div class="w3-twothird">
