--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
 </div>
 
     <div class="w3-twothird">
+      <img src="https://c7.uihere.com/files/56/403/799/http-404-error-wrong.jpg""/>
       <h1>Divine and Kitty</h1>
 </div>
 
