--- a/index.html
+++ b/index.html
@@ -32,14 +32,27 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
   
 </header>
 </div>
+<!-- Second Grid -->
+<div class="w3-row-padding w3-khaki w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-third w3-center">
+      <img src="https://c7.uihere.com/files/56/403/799/http-404-error-wrong.jpg""/>
+    </div>
 
     <div class="w3-twothird">
-      <img src="https://c7.uihere.com/files/56/403/799/http-404-error-wrong.jpg""/>
-      <h1>Divine and Kitty</h1>
+      <h1>Lorem Ipsum</h1>
+      <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
+
+      <p class="w3-text-grey">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+  </div>
 </div>
 
-<div class="w3-container w3-khaki w3-center w3-opacity w3-padding-64">
-    <h1 class="w3-margin w3-xlarge">Status: In A Relation-self</h1>
+<div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+    <h1 class="w3-margin w3-xlarge">Quote of the day: live life</h1>
+</div>
 </div>
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
