--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
 </header>
 </div>
 <!-- Second Grid -->
-<div class="w3-row-padding w3-khaki w3-padding-64 w3-container">
+<div class="w3-row-padding w3-white w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
       <img src="https://c7.uihere.com/files/56/403/799/http-404-error-wrong.jpg""/>
