--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
 </header>
 </div>
 <!-- Second Grid -->
+    </div>
+  </div>
+</div>
 
       <img src="https://c7.uihere.com/files/56/403/799/http-404-error-wrong.jpg""/>
+
+    </div>
+  </div>
 </div>
 
 <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
