--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
   </div>
 </div>
 
-      <img src="https://c7.uihere.com/files/56/403/799/http-404-error-wrong.jpg""/>
+     <img src="https://c7.uihere.com/files/56/403/799/http-404-error-wrong.jpg" alt="Paris" class="center">
 
     </div>
   </div>
