--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
 </div>
 
 <div class="w3-container w3-khaki w3-right w3-opacity w3-padding-64">
-    <h1 class="w3-margin w3-xlarge">Current Status: In A Relation-self</h1>
+    <h1 class="w3-margin w3-right w3-xlarge">Current Status: In A Relation-self</h1>
 </div>
 </div>
 <!-- Footer -->
