--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
   <h1 class="w3-margin w3-italic w3-jumbo">WEB FUNDAMENTALS 101</h1>
   <p class="w3-xlarge">404-error-self-worth-not-found</p>
   
+     </div>
+  </div>
+</div>
+  
 </header>
 </div>
 <!-- Second Grid -->
