--- a/index.html
+++ b/index.html
@@ -181,8 +181,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
                     
                </div>
                 <!-- InstanceBeginEditable name="main_content" -->
+		    <div class="w3-row-padding w3-padding-64 w3-container">
+  <div class="w3-content">
+    <div class="w3-twothird">
                 <a href="javascript:void(0);" class="previous-page disabled" title="Go to Previous Page : Disabled"></a>
                 <a href="javascript:void(0);" class="next-page disabled" title="Go to Next Page : Disabled"></a>
+		    
                 <h1> WEB <span> FUNDAMENTALS 101</span></h1>
                 <P>404 ERROR.SELF WORTH NOT FOUND</P>
                 <p class="summary">Learn the essentials of web development technologies and build your own website.</p>
