--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
                 <h2>Welcome to Tutorial&nbsp;WEB FUNDAMENTALS 101</h2>
                 <p class="gap">At web WebFundamentals you can learn the essentials of web development technologies from the basic to advanced topics, along with real life practice examples and useful references, so that you can create your own website or build career in web development. Here you will find:</p>
                 <div class="section-left step-by-step ruler">
+			
+		    <div class="w3-twothird">	
                     <h2>Step by Step <span>Tutorial</span></h2>
                     <p>The tutorial section encloses an extensive collection of tutorials and examples that you can try and test yourself using online HTML editor. You will also find large numbers of demonstrations, tips and techniques covering everything you need to create web pages.</p>
                     <img src="step-by-step-illustration.png" width="220" height="220" alt="Step by Step Tutorial" />
@@ -200,6 +202,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
                     <p>GitHub is a Git repository hosting service, but it adds many of its own features. While Git is a command line tool, GitHub provides a Web-based graphical interface. It also provides access control and several collaboration features, such as a wikis and basic task management tools for every project.</p>
                     <p>Check out the complete <a href="https://opensource.com/article/18/1/step-step-guide-git">GITHUB &raquo;</a></p>
                     <img src="download.png" width="260" height="260" alt="GITHUB" />
+		
+                <div class="section-right reference ruler">
                 </div>
                
                              
