--- a/index.html
+++ b/index.html
@@ -192,10 +192,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Regular Italic", sans-serif}
                 <p class="gap">At web WebFundamentals you can learn the essentials of web development technologies from the basic to advanced topics, along with real life practice examples and useful references, so that you can create your own website or build career in web development. Here you will find:</p>
                 <div class="section-left step-by-step ruler">
 			
-		    <div class="w3-twothird">	
+		     <div class="section-right reference ruler">
                     <h2>Step by Step <span>Tutorial</span></h2>
                     <p>The tutorial section encloses an extensive collection of tutorials and examples that you can try and test yourself using online HTML editor. You will also find large numbers of demonstrations, tips and techniques covering everything you need to create web pages.</p>
                     <img src="step-by-step-illustration.png" width="220" height="220" alt="Step by Step Tutorial" />
+			       <div class="section-right reference ruler">
                 </div>
                 <div class="section-right reference ruler">
                     <h2>GITHUB</h2>
